Fixed issues on mobile with media queries.

--- a/css/main.css
+++ b/css/main.css
@@ -451,6 +451,10 @@ footer {
   width: 300px;
 }
 
+.methodBoxes p{
+  margin: 0;
+}
+
 .methodBoxes > h3 {
   font-weight: 550;
   color: #fefffe;
@@ -637,6 +641,7 @@ button {
   border-radius: 0.5em;
   background-image: url('/img/will.jpg');
   background-size: cover;
+  background-position: center;
 }
 
 .circleAustin {
@@ -973,6 +978,9 @@ button {
     width: 100%;
     height: 90vh;
   }
+  .methodBoxes p{
+    margin: 0;
+  }
   .serviceContainerText1 {
     display: flex;
     flex-direction: column;
@@ -1010,7 +1018,7 @@ button {
     height: 100%;
     width: 50%;
   }
-  .sectionContainer2 {
+  .serviceContainer2 {
     display: flex;
     flex-direction: column;
     align-items: center;
